@@ -6,6 +6,7 @@ Version 0.2.9 (2019-02-22)
 4. Rename package (net.cua->cn.ttzero)
    访问[ttzero](https://www.ttzero.cn)可以了解更多关于eec的信息(网站还处于建设中)
 5. ExcelReader增加返回Excel文件基本信息
+6. ExcelReader增加BIFF8(Excel97~2003)classpath加载
 
 Version 0.2.8 (2018-11-26)
 -------------
